# bitcoin-ctf

./: Cargo.toml  Readme.md  clippy.toml  game_state.toml
.cargo/: config.toml
src/: cli.rs  constrants.rs  ctf.rs  level.rs  main.rs  state.rs  utils.rs
src/bitcoin/: mod.rs  regtest.rs  transaction.rs
src/levels/: first_level.rs  mod.rs  second_level.rs
temp/: check.jsonn
