[package]
name = "btc-ctf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.68"
tokio = { version = "1.24.1", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0.152", features = ["derive"] }
colored = "2.0.0"
bitcoind = "0.36.0"
toml = "0.7.2"